<resources>
    <string name="network_status">Network Status</string>
    <string name="scheduling_n1_fix">Scheduling N1 Fix</string>
    <string name="widget_update_called">Widget Update Called</string>
    <string name="logfile_delete_err_toast">Log does not exist</string>
    <string name="logfile_delete_toast">Log File Deleted</string>
    <string name="connect">Connect</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="enabling_logging">Debug Enabled</string>
    <string name="disabling_logging">Debug Disabled</string>
    <string name="donatenag">If you use this software, please donate!</string>
    <string name="thank_you">Thank You for using Wifi Fixer</string>
    <string name="emailintent">Select Gmail: other apps may not attach log</string>
    <string name="issue_prompt">Please describe the issue. Be as specific as you can.</string>
    <string name="subject">WifiFixer Log</string>
    <string name="email" translatable="false">zanshin.g1+wifi_fixer@gmail.com</string>
    <string name="sd_card_unavailable">SD Card Unavailable</string>
    <string name="donateservice">com.wahtod.wififixer.WFDonateService</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="preferences">Settings</string>
    <string name="send_log">Send Log</string>
    <string name="ondestroy">Service Destroyed</string>
    <string name="colon">:</string>
    <string name="prefs_change">Prefs Change:</string>
    <string name="connect_failed">Connect Failed</string>
    <string name="initiating_scan">Initiating Scan</string>
    <string name="signalhop_no_result">Signalhop: No better network</string>
    <string name="number_of_known">known networks:</string>
    <string name="signal_poor">Signal poor: SignalHop scan</string>
    <string name="current_dbm">Current dBm:</string>
    <string name="hopping">Hopping to better network</string>
    <string name="wifi_repair_post_failed">Wifi Repair:Screen Off</string>
    <string name="wifi_not_current_network">Wifi Not Current Network</string>
    <string name="running_wifi_repair">Running Wifi Repair</string>
    <string name="releasing_wake_lock">Releasing Wake Lock</string>
    <string name="acquiring_wake_lock">Acquiring Wake Lock</string>
    <string name="running_supplicant_fix">Running Supplicant Fix</string>
    <string name="oncreate">Service Started</string>
    <string name="wififixerservice_build">Service Build:</string>
    <string name="wifi_connection_problem">Wifi Status:</string>
    <string name="supplicant_state">Supplicant State:</string>
    <string name="loading_settings">Loading Settings</string>
    <string name="best_signal_ssid">Best Signal: SSID:</string>
    <string name="signal_level">Signal Level:</string>
    <string name="capabilities">Capabilities:</string>
    <string name="found_ssid">Found SSID:</string>
    <string name="parsing_scan_results">Processing Scan Results</string>
    <string name="null_scan_results">Null Scan Results</string>
    <string name="cached_ip">Cached IP:</string>
    <string name="wifi_state_unknown">WIFI_STATE_UNKNOWN</string>
    <string name="wifi_state_disabled">WIFI_STATE_DISABLED</string>
    <string name="wifi_state_enabled">WIFI_STATE_ENABLED</string>
    <string name="wifi_state_disabling">WIFI_STATE_DISABLING</string>
    <string name="wifi_state_enabling">WIFI_STATE_ENABLING</string>
    <string name="reconnecthandler">Scan Results Acquired:Running Reconnect_Handler</string>
    <string name="repairhandler">Scan Results Acquired:Running Repair_Handler</string>
    <string name="start_intent">Start Intent</string>
    <string name="alarm_intent">Alarm Intent</string>
    <string name="screen_on_handler">SCREEN_ON handler</string>
    <string name="screen_off_handler">SCREEN_OFF handler</string>
    <string name="authorized">Authorized</string>
    <string name="donatethanks">Thank you for your donation.</string>
    <string name="isauthed" translatable="false">ISAUTHED</string>
    <string name="authed">Yep, we\'re authed!</string>
    <string name="packagename" translatable="false">org.wahtod.wififixer</string>
    <string name="wifi_is_disabled">Wifi Off</string>
    <string name="wifi_is_enabled">Wifi On</string>
    <string name="connecting_to_network">Connecting to:</string>
    <string name="releasing_wifi_lock">Releasing Wifi Lock</string>
    <string name="acquiring_wifi_lock">Acquiring Wifi Lock</string>
    <string name="nid" translatable="false">NID:</string>
    <string name="fix_algorithm">Fix Algorithm</string>
    <string name="repairing">Repairing</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="reassociating">Reassociating</string>
    <string name="shouldrun_false_dying">SHOULDRUN false, exiting.</string>
    <string name="supplicant_nonresponsive_toggling_wifi">Supplicant Nonresponsive, resetting wifi</string>
    <string name="exiting_supplicant_fix_thread_starting_scan">Exiting Supplicant Fix Thread:Starting Scan</string>
    <string name="wifi_off_aborting_reconnect">Wifi Off:Aborting Reconnect</string>
    <string name="toggling_wifi">Resetting Wifi</string>
    <string name="connected_to_network">Connected to Network:</string>
    <string name="wifi_off_aborting_repair">Wifi Off:Aborting Repair</string>
    <string name="app_name" translatable="false">Wifi Fixer</string>
    <string name="app_desc" translatable="false">Wifi health monitoring service</string>
    <string name="passed">PASSED</string>
    <string name="failed">FAILED</string>
    <string name="reenablenetwork">Disabled network re-enabled:</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="set_non_managed">Toggle Non-Managed</string>
    <string name="scan_interrupt">Scan would interrupt supplicant</string>
    <string name="not_managing_network">Not managing network:</string>
    <string name="supplicant_associate_threshold_exceeded">Associate Threshold Exceeded: resetting
        wifi
    </string>
    <string name="none">none</string>
    <string name="low_memory">Low Memory</string>
    <string name="error_allocating_buffered_writer">Error allocating buffered writer:</string>
    <string name="log_mimetype">message/rfc882</string>
    <string name="unmanaged" translatable="false">-U-</string>
    <string name="scan_mode">Should be in normal system scan mode</string>
    <string name="alert_message">Preparing email</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="null_ssid">None</string>
    <string name="http">http://</string>
    <string name="k">KB</string>
    <string name="strict_mode_extant">Strict Mode Extant</string>
    <string name="strict_mode_unavailable">Strict Mode Unavailable</string>
    <string name="service_status">Service</string>
    <string name="enabling_wififixerservice">Service Enabled</string>
    <string name="disabling_wififixerservice">Service Disabled</string>
    <string name="wifi">WiFi</string>
    <string name="enabling_wifi">Enabling Wifi</string>
    <string name="disabling_wifi">Disabling Wifi</string>
    <string name="knownnetworks_fragment_header">Known Networks</string>
    <string name="scanfragment_header">Local Networks</string>
    <string name="open_network">Open</string>
    <string name="resource" translatable="false">resource</string>
    <string name="xml">xml</string>
    <string name="SCREEN_summary">Service checks network when screen is off: will use
        slightly more battery
    </string>
    <string name="SCREEN_title">Manage During Sleep</string>
    <string name="Disable_title">Disable Service</string>
    <string name="Disable_summary">Disables wifi management service</string>
    <string name="Perf_Mode_title">Set Wifi Profile</string>
    <string name="Perf_Mode_summary">Adjusts settings automatically using profiles</string>
    <string name="StateNotif_title">Status Notification</string>
    <string name="StateNotif_summary">Displays an ongoing notification showing connection
        state when service is enabled
    </string>
    <string name="Notifications_title">Repair Notifications</string>
    <string name="Notifications_summary">Displays a notification when Wifi Fixer repairs a
        problem
    </string>
    <string name="SLOG_title">Debug</string>
    <string name="SLOG_summary">Outputs Wifi Fixer\'s diagnostic info to the Android debug log</string>
    <string name="WIDGET_title">Widget Behavior</string>
    <string name="WIDGET_summary">Changes Launcher Widget tap behavior</string>
    <string name="WifiLock_title">Enable Wifi Lock</string>
    <string name="WifiLock_summary">Enables Wifi Lock: will increase battery use slightly</string>
    <string name="SLEEP_POLICY_title">Wifi Sleep Policy</string>
    <string name="SLEEP_POLICY_summary">Opens Wifi Settings tap for advanced: See Known Issues
    </string>
    <string name="N1FIX2_title">Nexus One Sleep Fix</string>
    <string name="N1FIX2_summary">Experimental: please read Wifi Sleep Policy section of Known Issues in
        Help.
    </string>
    <string name="remove">Remove</string>
    <string name="removing_network">Removing:</string>
    <string name="passwd_entry_text">Enter wifi key</string>
    <string name="network_check">Network Check:</string>
    <string name="http_ok" translatable="false">:HTTP_OK:</string>
    <string name="http_fail" translatable="false">:HTTP_FAIL:</string>
    <string name="icmp_ok" translatable="false">:ICMP_OK:</string>
    <string name="icmp_fail" translatable="false">:ICMP_FAIL:</string>
    <string name="critical_timeout">Network Check fail: critical timeout</string>
    <string name="add">Add</string>
    <string name="button_connect">Tap to connect</string>
    <string name="phone_ui_tutorial">UI Tutorial</string>
    <string name="dbmfloor_title">Signalhop Level</string>
    <string name="dbmfloor_summary">Level at which Wifi Fixer scans for a better known network \nDefault is
        recommended
    </string>
    <string name="dbmfloor_key">DBMFLOOR</string>
    <string name="WAKELOCK_summary">Most devices operate correctly with this enabled. Reduces battery use slightly.
    </string>
    <string name="WAKELOCK_title">Disable Sleep Wake Lock</string>
    <string name="BLIST_summary"><![CDATA[Disables attwifi hotspot so it will not be connected to]]></string>
    <string name="BLIST_title"><![CDATA[AT&T Hotspot Blacklist]]></string>
    <string name="sendlog_title">Send Log</string>
    <string name="sendlog_summary">Send Log to developer</string>
    <string name="writelog_summary">Dumps log to /sdcard/Android/data/org.wahtod.wififixer/files/wififixer_log.txt</string>
    <string name="writelog_title">Write Log</string>
    <string name="deletelog_summary">Deletes log file from sdcard</string>
    <string name="deletelog_title">Delete Log</string>
    <string name="phone_ui_tutorial_summary">Starts a simple tutorial on Wifi Fixer\'s main user interface</string>
    <string name="documentation_title">Documentation</string>
    <string name="documentation_summary">Open Documentation</string>
    <string name="multibssd_summary_off">Android decides which network is connected to</string>
    <string name="multibssd_summary_on">Wifi Fixer decides which network is connected to</string>
    <string name="multibssid_title">Multipoint networks</string>
    <string name="forcehttp_summaryoff">Forces HTTP for network checks. Requires internet connected WAP</string>
    <string name="forcehttp_summaryon">Network checks forced to use HTTP</string>
    <string name="forcehttp_title">Force HTTP</string>
    <string name="advnetwork_category_title">Advanced Networks</string>
    <string name="wifi_usability_category_title">Wifi Usability</string>
    <string name="specialized_category_title">Specialized Fixes</string>
</resources>