<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Wifi Fixer for Android
  ~        Copyright (C) 2010-2016  David Van de Ven
  ~
  ~        This program is free software: you can redistribute it and/or modify
  ~        it under the terms of the GNU General Public License as published by
  ~        the Free Software Foundation, either version 3 of the License, or
  ~        (at your option) any later version.
  ~
  ~        This program is distributed in the hope that it will be useful,
  ~        but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~        GNU General Public License for more details.
  ~
  ~        You should have received a copy of the GNU General Public License
  ~        along with this program.  If not, see http://www.gnu.org/licenses
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/advnetwork_category_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="MULTI"
            android:summaryOff="@string/multibssd_summary_off"
            android:summaryOn="@string/multibssd_summary_on"
            android:title="@string/multibssid_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="HTTP"
            android:summaryOff="@string/forcehttp_summaryoff"
            android:summaryOn="@string/forcehttp_summaryon"
            android:title="@string/forcehttp_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/dbmfloor_title">
        <ListPreference
            android:defaultValue="-90"
            android:entries="@array/dbmfloor"
            android:entryValues="@array/dbmfloorValues"
            android:key="@string/dbmfloor_key"
            android:summary="@string/dbmfloor_summary"
            android:title="@string/dbmfloor_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wifi_usability_category_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="WiFiLock"
            android:summary="@string/WifiLock_summary"
            android:title="@string/WifiLock_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="SCREEN"
            android:summary="@string/SCREEN_summary"
            android:title="@string/SCREEN_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="WAKELOCK_DISABLE"
            android:summary="@string/WAKELOCK_summary"
            android:title="@string/WAKELOCK_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/specialized_category_title">
        <PreferenceScreen
            android:summary="@string/SLEEP_POLICY_summary"
            android:title="@string/SLEEP_POLICY_title">
            >
            <intent android:action="android.settings.WIFI_SETTINGS" />
        </PreferenceScreen>
        <CheckBoxPreference
            android:key="N1FIX2"
            android:summary="@string/N1FIX2_summary"
            android:title="@string/N1FIX2_title" />
        <CheckBoxPreference
            android:key="ATTBLIST"
            android:summary="@string/BLIST_summary"
            android:title="@string/BLIST_title" />
    </PreferenceCategory>

</PreferenceScreen>